Updates Dockerfile and docker-compose for scraper, and exposes at local port 8001

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,5 @@ services:
   resourcescraper:
     build: ./scraper
     image: sleepypioneer/resourcescraper:latest
+    ports:
+      - "8001:8001"
