--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
         fi
 
     - name: Build
-      run: go build -v ./scraper
+      run: go build -v ./server-test-articles
 
   gofmt:
     runs-on: ubuntu-latest
