--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,10 +15,12 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
+        cd scraper
         python -m pip install --upgrade pip
         pip install -r ./scraper/requirements.txt
     - name: Lint with flake8
       run: |
+        cd scraper/
         pip install flake8
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -26,5 +28,6 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        cd scraper/
         pip install pytest
-        python -m pytest ./scraper/tests/
+        python -m pytest tests/
