--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         cd scraper
         python -m pip install --upgrade pip
-        pip install -r ./scraper/requirements.txt
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         cd scraper/
