--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -18,14 +18,11 @@ jobs:
         cd scraper
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    # - name: Lint with flake8
-    #   run: |
-    #     cd scraper/
-    #     pip install flake8
-    #     # stop the build if there are Python syntax errors or undefined names
-    #     flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-    #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Lint with black
+      run: |
+        cd scraper/
+        pip install black
+        black . --diff 
     - name: Test with pytest
       run: |
         cd scraper/
