--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: '1.13'
-      - run: go test ./... -cover -race
+      - run: go get ./... && go test ./... -cover -race
 
   gofmt:
     runs-on: ubuntu-latest
